--- a/public/styles.css
+++ b/public/styles.css
@@ -215,10 +215,35 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
 }
+
+.hide-button{
+  height: 100px;
+  border-bottom: 3px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-hide-wrapper{
+  width: 70px;
+  margin-left: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.btn-hide-wrapper img{
+  max-width: 100%;
+}
+
+#btnCancel{
+  width: 58px;
+}
+
 #list {
+
   width: 100%;
   height: 100%;
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   left: 0;
   display: -webkit-box;
